--- a/rel/rel.vcxproj
+++ b/rel/rel.vcxproj
@@ -10,11 +10,12 @@
     <SccProjectName />
     <SccLocalPath />
     <ProjectGuid>{ADB0C12F-B09A-4220-9B1D-1F434B7610B0}</ProjectGuid>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <PlatformToolset>v100</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -25,8 +26,8 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(IDASDK_DIR)\ldr;$(IDASDK_DIR)\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(IDASDK_DIR)\lib\x86_win_vc_32;$(LibraryPath)</LibraryPath>
+    <IncludePath>H:\Downloads\IDAPRO68\IDAPro68\idasdk68\include;H:\Downloads\IDAPRO68\IDAPro68\idasdk68\ldr;$(IncludePath)</IncludePath>
+    <LibraryPath>H:\Downloads\IDAPRO68\IDAPro68\idasdk68\lib\x86_win_vc_32;$(LibraryPath)</LibraryPath>
     <TargetExt>.ldw</TargetExt>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
